opam-version: "1.2"
maintainer: "Jacques-Henri Jourdan <jacques-henri.jourdan@normalesup.org>"
authors: ["Jacques-Henri Jourdan <jacques-henri.jourdan@normalesup.org>"
          "Frédéric Bour <frederic.bour@lakaban.net>"]
homepage: "https://github.com/jhjourdan/statmemprof-emacs"
doc: "https://jhjourdan.mketjh.fr//statmemprof-emacs/doc"
license: "MIT"
dev-repo: "https://github.com/jhjourdan/statmemprof-emacs.git"
bug-reports: "https://github.com/jhjourdan/statmemprof-emacs/issues"
tags: []
available: [ compiler = "4.03.0+statistical-memprof"
           | compiler = "4.05.0+statistical-memprof"
           | compiler = "4.06.0+statistical-memprof" ]
depends:
[
  "jbuilder" {build}
  "sturgeon" { >= "0.3" }
  "inuit" { >= "0.3" }
]
depopts: []
build: [
  ["jbuilder" "subst" "-n" name] {pinned}
  ["jbuilder" "build" "-p" name "-j" jobs]
]
